--- a/Shop/catalogue-page/app/scss/all.scss
+++ b/Shop/catalogue-page/app/scss/all.scss
@@ -1658,7 +1658,7 @@ i {
 	}
 }
 
-.header_city_select.open .header_dropdown {
+.header_city_select.open .header_dropdown, .sort_dropdown {
 	transform: translateY(0);
 	opacity: 1;
 	visibility: visible;
@@ -1728,7 +1728,7 @@ i {
 	transition: color .3s, border .3s;
 }
 
-.header_dropdown {
+.header_dropdown, .sort_dropdown {
 	position: absolute;
 	top: 100%;
 	left: 0;
