--- a/Shop/catalogue-page/app/scss/catalog.scss
+++ b/Shop/catalogue-page/app/scss/catalog.scss
@@ -258,7 +258,7 @@ ul {
                 position: relative;
                 display: block;
                 color: #585858;
-                padding: 8px 0;
+                padding: 13px 0;
                 padding-left: 20px;
             }
             .button:after {
@@ -378,6 +378,18 @@ ul {
                     }
                 }
                 .selected {
+                    position: relative;
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        right: -14px;
+                        top: 7px;
+                        width: 9px;
+                        height: 8px;
+                        background: url(../images/filter_arr.png) no-repeat center center;
+                        background-size: contain;
+                        transform: rotate(180deg);
+                    }
                     display: none;
                     color: #000;
                 }
@@ -404,7 +416,7 @@ ul {
                     transition: transform .3s, opacity .3s, visibility .3s;
                     a {
                         display: block;
-                        margin: 5px 12px;
+                        margin: 10px 12px;
                     }
                 }
                 .first {
