--- a/Shop/catalogue-page/app/scss/filter.scss
+++ b/Shop/catalogue-page/app/scss/filter.scss
@@ -18,6 +18,8 @@
     border: 1px solid #e5e5e5;
     width: 100%;
     background: #fff;
+    position: relative;
+    z-index: 3;
     .section {
         border-bottom: 1px solid #e5e5e5;
         transition: .3s;
@@ -28,6 +30,18 @@
             cursor: pointer;
             position: relative;
             padding: 13px 22px;
+            padding-left: 40px;
+            .open_button {
+            	position: absolute;
+            	width: 100%;
+            	height: 100%;
+            	border: none;
+            	left: 0;
+            	top: 0;
+            	padding: 0;
+            	cursor: pointer;
+            	z-index: 2;
+            }
             .select_indicator {
                 position: absolute;
                 left: 0;
@@ -41,6 +55,20 @@
                     border-left: 9px solid #197ac4;
                 }
             }
+            .arrow {
+                    display: block;
+                    transform: rotate(90deg);
+                    position: absolute;
+                    left: 20px;
+                    height: 14px;
+                    transition: .3s;
+                    top: 17px;
+                    i {
+                        font-size: 1.2em;
+                        line-height: 70%;
+                        color: #afafaf;
+                    }
+                }
             .item {
                 	position: absolute;
                 	right: 10px;
@@ -85,39 +113,26 @@
                 }
             .button_container {
                 height: 100%;
-                display: flex;
                 position: relative;
-                .arrow {
-                    display: block;
-                    transform: rotate(90deg);
-                    position: absolute;
-                    left: 3px;
-                    height: 14px;
-                    transition: .3s;
-                    top: 5px;
-                    i {
-                        font-size: 1.2em;
-                        line-height: 70%;
-                        color: #afafaf;
-                    }
-                }
+                display: inline;
                 .section_title {
-                    padding-left: 20px;
                     font-weight: bold;
                     color: #040000;
                     line-height: 160%;
                     position: relative;
                     z-index: 1;
+                    display: inline;
                 }
                 .description {
                     opacity: 0;
                     margin-left: 7px;
                     transition: .3s;
                     position: absolute;
+                    z-index: 3;
                     right: -24px;
                     bottom: -3px;
                     i {
-                        font-size: 1.5em;
+                        font-size: 1.35em;
                         color: #bab8b6;
                         transition: .3s;
                         &:hover {
@@ -127,7 +142,7 @@
                 }
             }
             &:hover {
-                .button_container .arrow {
+                .arrow {
                     i {
                         color: #197ac4;
                     }
@@ -138,7 +153,7 @@
             }
         }
         .title_active {
-            .button_container .arrow {
+            .arrow {
                 transform: rotate(-90deg);
             }
             .select_indicator {
